SLING-13118 update test dependencies, eliminate usage of guava in test code (#16)
additionally, switch to non-deprecated String-related signatures from commons lang (also in main code)